[gd_scene load_steps=3 format=2]

[ext_resource path="res://tools/Tool.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 263.93

[node name="Tool" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 1 )

[node name="ControlRoot" type="Control" parent="."]
editor/display_folded = true

[node name="ActionBox" type="VBoxContainer" parent="ControlRoot"]
margin_right = 40.0
margin_bottom = 40.0

[node name="DeleteButton" type="Button" parent="ControlRoot/ActionBox"]
margin_right = 68.0
margin_bottom = 39.0
text = "Delete"

[node name="HoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverArea"]
shape = SubResource( 1 )
[connection signal="pressed" from="ControlRoot/ActionBox/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="input_event" from="HoverArea" to="." method="_on_HoverArea_input_event"]
[connection signal="mouse_entered" from="HoverArea" to="." method="_on_HoverArea_mouse_entered"]
[connection signal="mouse_exited" from="HoverArea" to="." method="_on_HoverArea_mouse_exited"]
